# my_synth

./: .gitignore  README.md
cpp/pulse_audio_sample/: pulse_async_test.cpp
cpp/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PulsePlayer.cpp  PulsePlayer.h  main.c  main.cpp  yswavfile.cpp  yswavfile.h
notebooks/: fourier.ipynb
py/: run.py
py/wavtools/: __init__.py  wav.py
